Add sample policies

--- a/.github/workflows/repo-scan.yaml
+++ b/.github/workflows/repo-scan.yaml
@@ -38,6 +38,6 @@ jobs:
 
       - name: NCTL Scan Repository
         run: |
-          nctl scan repository --policies policy/  --publish-token $NIRMATA_TOKEN
+          nctl scan repository --policies policies/  --publish-token $NIRMATA_TOKEN
   
       - run: echo "🍏 This job's status is ${{ job.status }}."
