--- a/manifests/k8s/deploy.yaml
+++ b/manifests/k8s/deploy.yaml
@@ -14,6 +14,9 @@ spec:
       labels:
         app: nginx
     spec:
+      hostPID: true
+      hostIPC: true
+      hostNetwork: true
       containers:
       - name: nginx
         image: nginx:1.14.2
