--- a/.github/workflows/repo-scan.yaml
+++ b/.github/workflows/repo-scan.yaml
@@ -22,12 +22,8 @@ jobs:
       - name: Check out main repository code
         uses: actions/checkout@v4
 
-      - name: NCTL-scan-installer - Terraform
-        uses: supplypike/setup-bin@v4
-        with:
-          uri: 'https://nirmata-downloads.s3.us-east-2.amazonaws.com/nctl/nctl_4.1.2/nctl_4.1.2_linux_386.zip'
-          name: 'nctl'
-          version: '4.1.2'
+      - name: Install nctl
+        uses: nirmata/action-install-nctl-scan@v0.0.10
 
       - name: Check nctl version
         run: |
