--- a/manifests/k8s/deploy.yaml
+++ b/manifests/k8s/deploy.yaml
@@ -14,18 +14,19 @@ spec:
       labels:
         app: nginx
     spec:
-      hostIPC: true
-      hostPID: true
-      hostNetwork: true
+      automountServiceAccountToken: false
+      securityContext:
+        runAsNonRoot: true
+        seccompProfile:
+          type: RuntimeDefault
       containers:
       - name: nginx
         image: nginx:1.14.2
         securityContext:
-          privileged: true
-          procMount: "/tmp/proc"
-          allowPrivilegeEscalation: true
-          windowsOptions:
-            hostProcess: true
+          allowPrivilegeEscalation: false
+          capabilities:
+            drop:
+              - ALL
         resources:
           requests:
             memory: "64Mi"
@@ -33,8 +34,4 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "500m"
-      volumes:
-      - name: test-vol
-        hostPath:
-          path: /tmp
-          type: Directory
+
