--- a/.github/workflows/repo-scan.yaml
+++ b/.github/workflows/repo-scan.yaml
@@ -19,8 +19,13 @@ jobs:
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
 
-      - name: Check out main repository code
-        uses: actions/checkout@v4
+      - name: Checkout PR branch
+        uses: actions/checkout@v3
+        with:
+          # Checks out the repository linked to the PR
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          # Checks out the branch from the PR
+          ref: ${{ github.event.pull_request.head.ref }}
 
       # - name: Install nctl
       #   uses: nirmata/action-install-nctl-scan@v0.0.9
