--- a/.github/workflows/repo-scan.yaml
+++ b/.github/workflows/repo-scan.yaml
@@ -46,6 +46,6 @@ jobs:
 
       - name: NCTL Scan Repository
         run: |
-          nctl scan repository --policy-sets pss-baseline,pss-restricted,dockerfile-best-practices  --publish-token $NIRMATA_TOKEN --details
+          nctl scan repository --policy-sets pss-baseline,pss-restricted,rbac-best-practices,dockerfile-best-practices  --publish-token $NIRMATA_TOKEN --details
   
       - run: echo "🍏 This job's status is ${{ job.status }}."
