--- a/manifests/k8s/deploy.yaml
+++ b/manifests/k8s/deploy.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nginx
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: nginx
@@ -23,7 +23,7 @@ spec:
       - name: nginx
         image: nginx:1.14.2
         securityContext:
-          allowPrivilegeEscalation: true
+          allowPrivilegeEscalation: false
           capabilities:
             drop:
               - ALL
