--- a/manifests/k8s/deploy.yaml
+++ b/manifests/k8s/deploy.yaml
@@ -4,6 +4,7 @@ metadata:
   name: nginx
   labels:
     app: nginx
+    env: dev
 spec:
   replicas: 1
   selector:
@@ -16,7 +17,7 @@ spec:
     spec:
       automountServiceAccountToken: false
       securityContext:
-        runAsNonRoot: true
+        runAsNonRoot: false
         seccompProfile:
           type: RuntimeDefault
       containers:
