--- a/.github/workflows/repo-scan.yaml
+++ b/.github/workflows/repo-scan.yaml
@@ -41,8 +41,8 @@ jobs:
         run: |
           nctl version
 
-      - name: nctl login
-        run: nctl login --url $NIRMATA_URL --userid anusha.hegde@nirmata.com --token $NIRMATA_TOKEN
+     # - name: nctl login
+     #   run: nctl login --url $NIRMATA_URL --userid anusha.hegde@nirmata.com --token $NIRMATA_TOKEN
 
       - name: NCTL Scan Repository
         run: |
