--- a/manifests/nginx/nginx.yaml
+++ b/manifests/nginx/nginx.yaml
@@ -18,3 +18,6 @@ spec:
       containers:
       - name: nginx
         image: nginx:1.14.2
+        securityContext:
+          privileged: true
+          allowPrivilegeEscalation: true
